--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>App</title>
+    <title>Oracles Randomizer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.png">
     <script src="wasm_exec.js"></script>
     <link href="styles.css" rel="stylesheet"></head>
   <body>
