--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Oracles Randomizer</title>
+    <meta name="description" content="Randomizer web interface for Zelda: Oracle of Ages/Seasons">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.png">
     <script src="wasm_exec.js"></script>
